# gridworks-protocol

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  repo_structure.md  requirements.txt
.github/workflows/: constraints.txt  release.yml  tests.yml
CodeGenerationTools/GridworksCore/: GnfCommon.xslt  SSoTmeProject.json  aicapture-template.json  aicapture.json  clean.sh  cook.sh
docs/: actor-class.rst  boolean-actuator.rst  component.rst  conf.py  data-polling-capturing-transmitting.rst  egauge-io.rst  enums.rst  gridworks-tank-module-1.rst  hardware-layout.rst  index.md  index.rst  iot-hubs.rst  lexicon.rst  make-model.rst  multipurpose-sensor.rst  reference.md  relay-state.rst  requirements.txt  sdk-types.rst  simple-sensor.rst  spaceheat-actor.rst  spaceheat-node-role.rst  spaceheat-node.rst  spaceheat-scada.rst  telemetry-name.rst  usage.md
docs/apis/: types.rst
docs/asls/: enums.rst  types.rst
docs/types/: ads111x-based-cac-gt.rst  ads111x-based-component-gt.rst  batched-readings.rst  boolean-actuator-cac-gt.rst  boolean-actuator-component-gt.rst  channel-config.rst  channel-readings.rst  component-attribute-class-gt.rst  component-gt.rst  data-channel-gt.rst  data-channel.rst  egauge-io.rst  egauge-register-config.rst  electric-meter-cac-gt.rst  electric-meter-component-gt.rst  fibaro-smart-implant-cac-gt.rst  fibaro-smart-implant-component-gt.rst  fsm-atomic-report.rst  fsm-event.rst  fsm-full-report.rst  fsm-trigger-from-atn.rst  gt-boolean-actuator-cac.rst  gt-boolean-actuator-component.rst  gt-dispatch-boolean-local.rst  gt-dispatch-boolean.rst  gt-driver-booleanactuator-cmd.rst  gt-sh-booleanactuator-cmd-status.rst  gt-sh-cli-atn-cmd.rst  gt-sh-multipurpose-telemetry-status.rst  gt-sh-simple-telemetry-status.rst  gt-sh-status.rst  gt-sh-telemetry-from-multipurpose-sensor.rst  gt-telemetry.rst  heartbeat-b.rst  hubitat-cac-gt.rst  hubitat-component-gt.rst  hubitat-poller-cac-gt.rst  hubitat-poller-component-gt.rst  hubitat-tank-cac-gt.rst  hubitat-tank-component-gt.rst  (+28 more)
src/gwproto/: __init__.py  __main__.py  api_types.py  codec.py  decoders.py  decoders_factory.py  default_decoders.py  errors.py  message.py  messages.py  property_format.py  topic.py  utils.py
tests/: __init__.py  cac_load_utils.py  component_load_utils.py  conftest.py  decode_utils.py  test_debug.py  test_debug2.py  test_decoders.py  test_decoders2.py  test_decorders.py  test_dispatch.py  test_event_enum_by_name.py  test_flush_and_load_house.py  test_gs_dispatch.py  test_gs_pwr.py  test_gt_dispatch_boolean.py  test_gt_dispatch_boolean_local.py  test_gt_driver_booleanactuator_cmd.py  test_gt_sh_booleanactuator_cmd_status.py  test_gt_sh_cli_atn_cmd.py  test_gt_sh_multipurpose_telemetry_status.py  test_gt_sh_simple_telemetry_status.py  test_gt_sh_status.py  test_gt_sh_status_event.py  test_gt_sh_telemetry_from_multipurpose_sensor.py  test_gt_telemetry.py  test_main.py  test_message.py  test_power.py  test_property_format.py  test_snapshot_spaceheat.py  test_telemetry_snapshot_spaceheat.py  test_topic.py
tests/config/: hardware-layout.json
tests/data/: batched_readings_message.json  batched_readings_message2.json  report_message.json  snapshot_message.json  status_message.json
tests/data_classes/: test_electric_meter_cac.py  test_electric_meter_component.py  test_hardware_layout.py
tests/dummy_decoders/: __init__.py
tests/enums/: actor_class_test.py  admin_event_test.py  admin_state_test.py  alert_priority_test.py  aquastat_control_test.py  change_aquastat_control_test.py  change_boiler_control_test.py  change_heat_pump_control_test.py  change_heatcall_source_test.py  change_lg_operating_mode_test.py  change_primary_pump_control_test.py  change_primary_pump_state_test.py  change_relay_pin_test.py  change_relay_state_test.py  change_store_flow_direction_test.py  change_store_flow_relay_test.py  change_valve_state_test.py  control_signal_type_test.py  fsm_action_type_test.py  fsm_event_type_test.py  fsm_name_test.py  fsm_report_type_test.py  gpm_from_hz_method_test.py  heat_pump_control_test.py  heatcall_source_test.py  hz_calc_method_test.py  iso_valve_state_test.py  kind_of_param_test.py  lg_operating_mode_test.py  local_comm_interface_test.py  main_auto_event_test.py  main_auto_state_test.py  make_model_test.py  market_price_unit_test.py  market_quantity_unit_test.py  pico_cycler_event_test.py  pico_cycler_state_test.py  primary_pump_control_test.py  relay_closed_or_open_test.py  relay_energization_state_test.py  (+10 more)
tests/gs/: test_gs_dispatch.py  test_gs_pwr.py
tests/gt/: __init__.py  test_gt_dispatch_boolean.py  test_gt_dispatch_boolean_local.py  test_gt_driver_booleanactuator_cmd.py  test_gt_sh_booleanactuator_cmd_status.py  test_gt_sh_cli_atn_cmd.py  test_gt_sh_multipurpose_telemetry_status.py  test_gt_sh_simple_telemetry_status.py  test_gt_sh_status.py  test_gt_sh_telemetry_from_multipurpose_sensor.py  test_gt_telemetry.py  test_snapshot_spaceheat.py  test_telemetry_snapshot_spaceheat.py  tmp.py
tests/named_types/: test_admin_wakes_up.py  test_ads111x_based_cac_gt.py  test_ads111x_based_component_gt.py  test_ads_channel_config.py  test_alert.py  test_analog_dispatch.py  test_async_btu_data.py  test_async_btu_params.py  test_atn_bid.py  test_channel_config.py  test_channel_readings.py  test_component_attribute_class_gt.py  test_component_gt.py  test_data_channel_gt.py  test_dfr_component_gt.py  test_dfr_config.py  test_dormant_ack.py  test_egauge_register_config.py  test_electric_meter_cac_gt.py  test_electric_meter_channel_config.py  test_electric_meter_component_gt.py  test_energy_instruction.py  test_fibaro_smart_implant_component_gt.py  test_fsm_atomic_report.py  test_fsm_event.py  test_fsm_full_report.py  test_fsm_trigger_from_atn.py  test_go_dormant.py  test_gt_sh_cli_atn_cmd.py  test_ha1_params.py  test_heartbeat_b.py  test_hubitat_component_gt.py  test_hubitat_gt.py  test_hubitat_poller_component_gt.py  test_hubitat_tank_component_gt.py  test_latest_price.py  (+30 more)
type_helpers/: __init__.py
(+649 files in other folders)
