[tool.poetry]
name = "gridworks-protocol"
version = "0.7.5"
description = "Gridworks Protocol"
authors = ["Jessica Millar <jmillar@gridworks-consulting.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thegridelectric/gridworks-protocol"
repository = "https://github.com/thegridelectric/gridworks-protocol"
documentation = "https://gridworks-protocol.readthedocs.io"
packages = [
    { include = "gwproto", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/thegridelectric/gridworks-protocol/releases"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
yarl = "^1.9.2"
pytz = "^2024.1"
pydantic = "^2.8.2"
gridworks = "^1.1.7"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
furo = ">=2021.11.12"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
ruff = "^0.5.6"

[tool.poetry.group.dev.dependencies]
types-pytz = ">=2022.4.0.0"
rich = ">=12.6.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gwproto", "tests"]

[tool.coverage.report]
show_missing = false
fail_under = 85

[tool.black]
extend_exclude = "src/gwproto/gt/|src/gwproto/gs/|src/gwproto/enums/"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = false
show_column_numbers = true
show_error_codes = true
show_error_context = false
[[tool.mypy.overrides]]
module = [
    "gwproto.gt.*",
    "gwproto.gs.*",
    "gwproto.enums.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "pendulum"
implicit_reexport = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".ci",
    ".github",
    "CodeGenerationTools",
    "for_docker",
    ".git",
    ".mypy_cache",
    ".nox",
    "htmlcov",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "pythonProject",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
]
output-format = "concise"
fix = true
show-fixes = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
# default select used by  ruff: ["E4", "E7", "E9", "F"]
select = ["B","C90","E4", "E7", "E9","F","I","N","PL", "W",]
ignore = ["PLR0904", "PLW1514", "W191",]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
#    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
#    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
#    # The below are debateable
#    "PLR2004", # Magic value used in comparison, ...
#    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
